@@ -20,14 +20,14 @@ import com.iab.openrtb.response.BidResponse;
 import com.iab.openrtb.response.EventTracker;
 import com.iab.openrtb.response.Response;
 import com.iab.openrtb.response.SeatBid;
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
-import org.mockito.junit.MockitoJUnit;
-import org.mockito.junit.MockitoRule;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.prebid.server.VertxTest;
 import org.prebid.server.bidder.ix.model.request.IxDiag;
+import org.prebid.server.bidder.ix.model.response.AuctionConfigExtBidResponse;
 import org.prebid.server.bidder.ix.model.response.IxBidResponse;
 import org.prebid.server.bidder.ix.model.response.IxExtBidResponse;
 import org.prebid.server.bidder.ix.model.response.NativeV11Wrapper;
@@ -46,37 +46,37 @@ import org.prebid.server.proto.openrtb.ext.request.ix.ExtImpIx;
 import org.prebid.server.proto.openrtb.ext.response.BidType;
 import org.prebid.server.proto.openrtb.ext.response.ExtBidPrebid;
 import org.prebid.server.proto.openrtb.ext.response.ExtBidPrebidVideo;
-import org.prebid.server.proto.openrtb.ext.response.FledgeAuctionConfig;
+import org.prebid.server.proto.openrtb.ext.response.ExtIgi;
+import org.prebid.server.proto.openrtb.ext.response.ExtIgiIgs;
 import org.prebid.server.version.PrebidVersionProvider;
 
 import java.util.List;
-import java.util.Map;
 import java.util.function.Function;
 import java.util.function.UnaryOperator;
 
 import static java.util.Arrays.asList;
+import static java.util.Collections.emptyList;
 import static java.util.Collections.singletonList;
 import static java.util.function.UnaryOperator.identity;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException;
 import static org.assertj.core.api.Assertions.tuple;
 import static org.mockito.BDDMockito.given;
+import static org.mockito.Mock.Strictness.LENIENT;
 import static org.prebid.server.proto.openrtb.ext.response.BidType.banner;
 
+@ExtendWith(MockitoExtension.class)
 public class IxBidderTest extends VertxTest {
 
     private static final String ENDPOINT_URL = "http://exchange.org/";
     private static final String SITE_ID = "site id";
 
-    @Rule
-    public final MockitoRule mockitoRule = MockitoJUnit.rule();
-
-    @Mock
+    @Mock(strictness = LENIENT)
     private PrebidVersionProvider prebidVersionProvider;
 
     private IxBidder target;
 
-    @Before
+    @BeforeEach
     public void setUp() {
         target = new IxBidder(ENDPOINT_URL, prebidVersionProvider, jacksonMapper);
         given(prebidVersionProvider.getNameVersionRecord()).willReturn(null);
@@ -101,7 +101,7 @@ public class IxBidderTest extends VertxTest {
         // then
         assertThat(result.getValue()).isEmpty();
         assertThat(result.getErrors()).hasSize(1);
-        assertThat(result.getErrors().get(0).getMessage()).startsWith("Cannot deserialize value");
+        assertThat(result.getErrors().getFirst().getMessage()).startsWith("Cannot deserialize value");
     }
 
     @Test
@@ -320,8 +320,8 @@ public class IxBidderTest extends VertxTest {
 
         // then
         assertThat(result.getErrors()).hasSize(1);
-        assertThat(result.getErrors().get(0).getMessage()).startsWith("Failed to decode: Unrecognized token");
-        assertThat(result.getErrors().get(0).getType()).isEqualTo(BidderError.Type.bad_server_response);
+        assertThat(result.getErrors().getFirst().getMessage()).startsWith("Failed to decode: Unrecognized token");
+        assertThat(result.getErrors().getFirst().getType()).isEqualTo(BidderError.Type.bad_server_response);
         assertThat(result.getBids()).isEmpty();
     }
 
@@ -433,7 +433,7 @@ public class IxBidderTest extends VertxTest {
     }
 
     @Test
-    public void makeBidderResponseShouldReturnBidWithVideoExt() throws JsonProcessingException {
+    public void makeBidderResponseShouldReturnBidWithVideoInfo() throws JsonProcessingException {
         // given
         final Video video = Video.builder().build();
         final BidRequest bidRequest = BidRequest.builder()
@@ -445,7 +445,7 @@ public class IxBidderTest extends VertxTest {
                         givenBidResponse(
                                 bidBuilder -> bidBuilder
                                         .impid("123")
-                                        .ext(mapper.valueToTree(ExtBidPrebid.builder()
+                                        .ext(mapper.createObjectNode().putPOJO("prebid", ExtBidPrebid.builder()
                                                 .video(ExtBidPrebidVideo.of(1, "cat"))
                                                 .build())))));
 
@@ -455,10 +455,7 @@ public class IxBidderTest extends VertxTest {
         // then
         assertThat(result.getErrors()).isEmpty();
         assertThat(result.getBids())
-                .extracting(BidderBid::getBid)
-                .extracting(Bid::getExt)
-                .extracting(node -> mapper.treeToValue(node, ExtBidPrebid.class))
-                .extracting(ExtBidPrebid::getVideo)
+                .extracting(BidderBid::getVideoInfo)
                 .extracting(ExtBidPrebidVideo::getDuration, ExtBidPrebidVideo::getPrimaryCategory)
                 .containsExactly(tuple(1, null));
     }
@@ -533,6 +530,86 @@ public class IxBidderTest extends VertxTest {
                 .imptrackers(asList("eventUrl", "impTracker"))
                 .eventtrackers(singletonList(EventTracker.builder()
                         .event(EventType.IMPRESSION.getValue())
+                        .url("eventUrl")
+                        .build()))
+                .build();
+
+        assertThat(result.getErrors()).isEmpty();
+        assertThat(result.getBids())
+                .extracting(BidderBid::getBid)
+                .extracting(Bid::getAdm)
+                .containsExactly(mapper.writeValueAsString(expectedNativeResponse));
+    }
+
+    @Test
+    public void makeBidderResponseShouldReturnAdmContainingEventImpTrackersUrlsWhenImpTrackersAreNull()
+            throws JsonProcessingException {
+        // given
+        final String adm = mapper.writeValueAsString(
+                Response.builder()
+                        .eventtrackers(singletonList(
+                                EventTracker.builder()
+                                        .event(EventType.IMPRESSION.getValue())
+                                        .url("eventUrl")
+                                        .build()))
+                        .build());
+        final BidRequest bidRequest = BidRequest.builder()
+                .imp(singletonList(Imp.builder().id("123").xNative(Native.builder().build()).build()))
+                .build();
+        final BidderCall<BidRequest> httpCall = givenHttpCall(
+                bidRequest,
+                mapper.writeValueAsString(givenBidResponse(bidBuilder -> bidBuilder
+                        .impid("123")
+                        .adm(adm))));
+
+        // when
+        final CompositeBidderResponse result = target.makeBidderResponse(httpCall, bidRequest);
+
+        // then
+        final Response expectedNativeResponse = Response.builder()
+                .imptrackers(asList("eventUrl"))
+                .eventtrackers(singletonList(EventTracker.builder()
+                        .event(EventType.IMPRESSION.getValue())
+                        .url("eventUrl")
+                        .build()))
+                .build();
+
+        assertThat(result.getErrors()).isEmpty();
+        assertThat(result.getBids())
+                .extracting(BidderBid::getBid)
+                .extracting(Bid::getAdm)
+                .containsExactly(mapper.writeValueAsString(expectedNativeResponse));
+    }
+
+    @Test
+    public void makeBidderResponseShouldReturnAdmWithoutImpTrackers()
+            throws JsonProcessingException {
+        // given
+        final String adm = mapper.writeValueAsString(
+                Response.builder()
+                        .eventtrackers(singletonList(
+                                EventTracker.builder()
+                                        .event(EventType.VIEWABLE_VIDEO50.getValue())
+                                        .url("eventUrl")
+                                        .build()))
+                        .build());
+        final BidRequest bidRequest = BidRequest.builder()
+                .imp(singletonList(Imp.builder().id("123").xNative(Native.builder().build()).build()))
+                .build();
+        final BidderCall<BidRequest> httpCall = givenHttpCall(
+                bidRequest,
+                mapper.writeValueAsString(givenBidResponse(bidBuilder -> bidBuilder
+                        .impid("123")
+                        .adm(adm))));
+
+        // when
+        final CompositeBidderResponse result = target.makeBidderResponse(httpCall, bidRequest);
+
+        // then
+        final Response expectedNativeResponse = Response.builder()
+                .imptrackers(emptyList())
+                .eventtrackers(singletonList(EventTracker.builder()
+                        .event(EventType.VIEWABLE_VIDEO50.getValue())
                         .url("eventUrl")
                         .build()))
                 .build();
@@ -662,7 +739,8 @@ public class IxBidderTest extends VertxTest {
                 .imp(singletonList(Imp.builder()
                         .id("123")
                         .banner(banner)
-                        .video(video).build()))
+                        .video(video)
+                        .build()))
                 .build();
         final BidderCall<BidRequest> httpCall = givenHttpCall(
                 bidRequest,
@@ -775,14 +853,14 @@ public class IxBidderTest extends VertxTest {
         // given
         final String impId = "imp_id";
         final BidResponse bidResponse = givenBidResponse(bidBuilder -> bidBuilder.impid(impId).mtype(1));
-        final ObjectNode fledgeAuctionConfig = mapper.createObjectNode();
+        final ObjectNode auctionConfig = mapper.createObjectNode();
         final BidRequest bidRequest = BidRequest.builder()
                 .imp(List.of(Imp.builder().id(impId).build()))
                 .build();
         final IxBidResponse bidResponseWithFledge = IxBidResponse.builder()
                 .cur(bidResponse.getCur())
                 .seatbid(bidResponse.getSeatbid())
-                .ext(IxExtBidResponse.of(Map.of(impId, fledgeAuctionConfig)))
+                .ext(IxExtBidResponse.of(List.of(AuctionConfigExtBidResponse.of(impId, auctionConfig))))
                 .build();
         final BidderCall<BidRequest> httpCall =
                 givenHttpCall(bidRequest, mapper.writeValueAsString(bidResponseWithFledge));
@@ -791,14 +869,15 @@ public class IxBidderTest extends VertxTest {
         final CompositeBidderResponse result = target.makeBidderResponse(httpCall, bidRequest);
 
         // then
+        final ExtIgiIgs igs = ExtIgiIgs.builder()
+                .impId(impId)
+                .config(auctionConfig)
+                .build();
+
         assertThat(result.getErrors()).isEmpty();
         assertThat(result.getBids())
                 .containsOnly(BidderBid.of(Bid.builder().impid(impId).mtype(1).build(), banner, bidResponse.getCur()));
-        final FledgeAuctionConfig expectedFledge = FledgeAuctionConfig.builder()
-                .impId(impId)
-                .config(fledgeAuctionConfig)
-                .build();
-        assertThat(result.getFledgeAuctionConfigs()).containsExactly(expectedFledge);
+        assertThat(result.getIgi()).containsExactly(ExtIgi.builder().igs(singletonList(igs)).build());
     }
 
     private static ExtRequest givenExtRequest(String pbjsv) {
